--- a/.mise.toml
+++ b/.mise.toml
@@ -5,3 +5,4 @@ dotnet = "latest"
 python = "3.11.9"
 bun = "1"
 pulumi = "3.112.0"
+"go:github.com/deepmap/oapi-codegen/v2/cmd/oapi-codegen" = "latest"
