--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,13 @@ jobs:
           sudo chown -R $(whoami) /__w/pulumi-flyio/pulumi-flyio
           git config --global --add safe.directory /__w/pulumi-flyio/pulumi-flyio
           git fetch --prune --unshallow --tags
+      - uses: jdx/mise-action@v2
+        with:
+          experimental: true
+      - name: Install pulumictl
+        uses: jaxxstorm/action-install-gh-release@v1.5.0
+        with:
+          repo: pulumi/pulumictl
       - name: Build
         id: build
         run: |
