--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,10 +35,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Unshallow clone for tags
         run: git fetch --prune --unshallow --tags
-      - name: Install Go
-        uses: actions/setup-go@v2
+      - uses: jdx/mise-action@v2
         with:
-          go-version: ${{matrix.goversion}}
+          experimental: true
       - name: Install pulumictl
         uses: jaxxstorm/action-install-gh-release@v1.5.0
         with:
@@ -48,11 +47,6 @@ jobs:
         with:
           args: -p 3 release --rm-dist
           version: latest
-    strategy:
-      fail-fast: true
-      matrix:
-        goversion:
-          - 1.17.x
   publish_sdk:
     name: Publish SDKs
     runs-on: ubuntu-latest
@@ -69,29 +63,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Unshallow clone for tags
         run: git fetch --prune --unshallow --tags
-      - name: Install Go
-        uses: actions/setup-go@v2
+      - uses: jdx/mise-action@v2
         with:
-          go-version: ${{ matrix.goversion }}
+          experimental: true
       - name: Install pulumictl
         uses: jaxxstorm/action-install-gh-release@v1.5.0
         with:
           repo: pulumi/pulumictl
-      - name: Install Pulumi CLI
-        uses: pulumi/action-install-pulumi-cli@v2.0.0
-      - name: Setup Node
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{matrix.nodeversion}}
-          registry-url: ${{env.NPM_REGISTRY_URL}}
-      - name: Setup DotNet
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: ${{matrix.dotnetversion}}
-      - name: Setup Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{matrix.pythonversion}}
       - name: Generate SDK
         run: make ${{ matrix.language }}_sdk
       - name: Check worktree clean
