--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,11 +24,7 @@ jobs:
         with:
           submodules: "recursive"
       - name: Unshallow clone for tags
-        id: tags
-        run: |
-          sudo chown -R $(whoami) /__w/pulumi-flyio/pulumi-flyio
-          git config --global --add safe.directory /__w/pulumi-flyio/pulumi-flyio
-          git fetch --prune --unshallow --tags
+        run: git fetch --prune --unshallow --tags
       - name: Cache Mise
         id: cache-mise
         uses: actions/cache@v4
