--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,7 +54,8 @@ jobs:
         run: make up
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-      - name: PulumiDown
+      - if: always()
+        name: PulumiDown
         id: down
         run: make down
         env:
