--- a/.github/workflows/lint-pr.yaml
+++ b/.github/workflows/lint-pr.yaml
@@ -1,19 +1,20 @@
-name: PR Title
+name: "Lint PR"
 
 on:
   pull_request_target:
     types:
       - opened
-      - reopened
       - edited
       - synchronize
 
+permissions:
+  pull-requests: read
+
 jobs:
-  lint:
-    runs-on: ubuntu-22.04
-    permissions:
-      statuses: write
+  main:
+    name: Validate PR title
+    runs-on: ubuntu-latest
     steps:
-      - uses: aslafy-z/conventional-pr-title-action@v3
+      - uses: amannn/action-semantic-pull-request@v5
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
