--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -22,10 +22,8 @@ resources:
       updateStrategy: bluegreen
       region: sea
       appName: ${app.name}
-      waitForChecks: 60000
-      waitForUpdate: 1000
       config:
-        image: nginx:latest
+        image: nginxdemos/hello:latest
         guest:
           cpus: 1
           cpuKind: shared
@@ -64,9 +62,8 @@ resources:
       name: machine-sea-2
       region: sea
       appName: ${app.name}
-      waitForChecks: 60000
       config:
-        image: nginx:latest
+        image: nginxdemos/hello:latest
         guest:
           cpus: 1
           cpuKind: shared
@@ -103,14 +100,12 @@ resources:
       updateStrategy: bluegreen
       region: iad
       appName: ${app.name}
-      waitForUpdate: 1000
-      waitForChecks: 60000
       config:
-        image: nginx:latest
+        image: nginxdemos/hello:latest
         guest:
           cpus: 1
           cpuKind: shared
-          memoryMb: 256
+          memoryMb: 512
         services:
           - internalPort: 80
             ports:
@@ -145,9 +140,8 @@ resources:
       name: machine-iad-2
       region: iad
       appName: ${app.name}
-      waitForChecks: 60000
       config:
-        image: nginx:latest
+        image: nginxdemos/hello:latest
         guest:
           cpus: 1
           cpuKind: shared
@@ -177,6 +171,20 @@ resources:
             concurrency:
               softLimit: 2000
               hardLimit: 2500
+  volume-sea:
+    type: flyio:Volume
+    properties:
+      name: volume_sea
+      region: sea
+      appName: ${app.name}
+      sizeGb: 5
+  volume-iad:
+    type: flyio:Volume
+    properties:
+      name: volume_iad
+      region: iad
+      appName: ${app.name}
+      sizeGb: 5
 
 outputs:
   appName:
