--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -1,16 +1,197 @@
-name: provider-xyz-native
+name: provider-flyio-native
 runtime: yaml
 plugins:
   providers:
-    - name: xyz
+    - name: flyio
       path: ../../bin
 
 resources:
-  myRandomResource:
-    type: xyz:Random
+  appName:
+    type: flyio:Random
     properties:
       length: 24
+  app:
+    type: flyio:App
+    properties:
+      appName: pulumi-${appName.result}
+      orgSlug: luke-shay
+  machine-sea-1:
+    type: flyio:Machine
+    properties:
+      name: machine-sea-1
+      updateStrategy: bluegreen
+      region: sea
+      appName: ${app.name}
+      config:
+        image: nginxdemos/hello:latest
+        guest:
+          cpus: 1
+          cpuKind: shared
+          memoryMb: 256
+        services:
+          - internalPort: 80
+            ports:
+              - port: 80
+                handlers:
+                  - http
+                forceHttps: true
+              - port: 443
+                handlers:
+                  - tls
+                  - http
+            protocol: tcp
+            checks:
+              - interval: 10s
+                gracePeriod: 5s
+                method: get
+                path: "/"
+                protocol: http
+                timeout: 2s
+                tlsSkipVerify: true
+            autostop: true
+            autostart: true
+            concurrency:
+              softLimit: 2000
+              hardLimit: 2500
+  machine-sea-2:
+    type: flyio:Machine
+    options:
+      dependsOn:
+        - ${machine-sea-1}
+    properties:
+      name: machine-sea-2
+      region: sea
+      appName: ${app.name}
+      config:
+        image: nginxdemos/hello:latest
+        guest:
+          cpus: 1
+          cpuKind: shared
+          memoryMb: 256
+        services:
+          - internalPort: 80
+            ports:
+              - port: 80
+                handlers:
+                  - http
+                forceHttps: true
+              - port: 443
+                handlers:
+                  - tls
+                  - http
+            protocol: tcp
+            checks:
+              - interval: 10s
+                gracePeriod: 5s
+                method: get
+                path: "/"
+                protocol: http
+                timeout: 2s
+                tlsSkipVerify: true
+            autostop: true
+            autostart: true
+            concurrency:
+              softLimit: 2000
+              hardLimit: 2500
+  machine-iad-1:
+    type: flyio:Machine
+    properties:
+      name: machine-iad-1
+      updateStrategy: bluegreen
+      region: iad
+      appName: ${app.name}
+      config:
+        image: nginxdemos/hello:latest
+        guest:
+          cpus: 1
+          cpuKind: shared
+          memoryMb: 512
+        services:
+          - internalPort: 80
+            ports:
+              - port: 80
+                handlers:
+                  - http
+                forceHttps: true
+              - port: 443
+                handlers:
+                  - tls
+                  - http
+            protocol: tcp
+            checks:
+              - interval: 10s
+                gracePeriod: 5s
+                method: get
+                path: "/"
+                protocol: http
+                timeout: 2s
+                tlsSkipVerify: true
+            autostop: true
+            autostart: true
+            concurrency:
+              softLimit: 2000
+              hardLimit: 2500
+  machine-iad-2:
+    type: flyio:Machine
+    options:
+      dependsOn:
+        - ${machine-iad-1}
+    properties:
+      name: machine-iad-2
+      region: iad
+      appName: ${app.name}
+      config:
+        image: nginxdemos/hello:latest
+        guest:
+          cpus: 1
+          cpuKind: shared
+          memoryMb: 256
+        services:
+          - internalPort: 80
+            ports:
+              - port: 80
+                handlers:
+                  - http
+                forceHttps: true
+              - port: 443
+                handlers:
+                  - tls
+                  - http
+            protocol: tcp
+            checks:
+              - interval: 10s
+                gracePeriod: 5s
+                method: get
+                path: "/"
+                protocol: http
+                timeout: 2s
+                tlsSkipVerify: true
+            autostop: true
+            autostart: true
+            concurrency:
+              softLimit: 2000
+              hardLimit: 2500
+  volume-iad:
+    type: flyio:Volume
+    options:
+      dependsOn:
+        - ${machine-iad-1}
+    properties:
+      name: volume_iad
+      region: iad
+      appName: ${app.name}
+      sizeGb: 5
+  volume-sea:
+    type: flyio:Volume
+    options:
+      dependsOn:
+        - ${machine-sea-1}
+    properties:
+      name: volume_sea
+      region: sea
+      appName: ${app.name}
+      sizeGb: 5
 
 outputs:
-  output:
-    value: ${myRandomResource.result}
+  appName:
+    value: ${app.name}
