--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,10 +46,12 @@ jobs:
           cache: true
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+        uses: goreleaser/goreleaser-action@v5
         with:
-          args: -p 3 release --rm-dist
+          args: -p 3 release --clean
           version: latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   publish_sdk:
     name: Publish SDKs
     runs-on: ubuntu-latest
