--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -79,6 +79,8 @@ jobs:
           cache: true
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Generate SDK
+        run: make build
+      - name: Generate SDK
         run: make ${{ matrix.language }}_sdk
       - name: Check worktree clean
         run: |
