--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -54,7 +54,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: bin
-          path: ${{ github.workspace}}/bin
+          path: ./bin
   publish_sdk:
     name: Publish SDKs
     runs-on: ubuntu-latest
@@ -79,10 +79,7 @@ jobs:
           repo: pulumi/pulumictl
           cache: true
           token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/download-artifact@v4
-        with:
-          name: bin
-          path: ${{ github.workspace}}/bin
+      - run: make build
       - name: Generate SDK
         run: make ${{ matrix.language }}_sdk
       - name: Check worktree clean
