--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -119,6 +119,6 @@ jobs:
       matrix:
         language:
           - nodejs
-          #- python
-          #- dotnet
+          - python
+          - dotnet
           - go
