--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -6,6 +6,6 @@
 	"dependencies": {
 		"typescript": "^4.0.0",
 		"@pulumi/pulumi": "^3.0.0",
-		"pulumi-flyio": "*"
+		"pulumi-flyio": "0.0.18+dirty"
 	}
 }
