--- a/sdk/dotnet/Pulumi.Flyio.csproj
+++ b/sdk/dotnet/Pulumi.Flyio.csproj
@@ -9,6 +9,7 @@
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl>https://github.com/lukeshay/pulumi-flyio</RepositoryUrl>
     <PackageIcon>logo.png</PackageIcon>
+    <Version>0.0.18+dirty</Version>
 
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
