--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -23,6 +23,6 @@
     "pulumi": {
         "resource": true,
         "name": "flyio",
-        "server": "https://github.com/lukeshay/pulumi-flyio/releases/download/0.0.18+dirty"
+        "server": "https://github.com/lukeshay/pulumi-flyio/releases/download/${VERSION}"
     }
 }
