--- a/sdk/superfly/nodejs/tsconfig.json
+++ b/sdk/superfly/nodejs/tsconfig.json
@@ -21,6 +21,7 @@
         "index.ts",
         "ip.ts",
         "machine.ts",
+        "postgresAttachment.ts",
         "provider.ts",
         "random.ts",
         "secrets.ts",
