--- a/sdk/dotnet/PulumiFlyio.Flyio.csproj
+++ b/sdk/dotnet/PulumiFlyio.Flyio.csproj
@@ -9,7 +9,7 @@
     <PackageProjectUrl></PackageProjectUrl>
     <RepositoryUrl>https://github.com/lukeshay/pulumi-flyio</RepositoryUrl>
     <PackageIcon>logo.png</PackageIcon>
-    <Version>0.0.35+dirty</Version>
+    <Version>0.0.37</Version>
 
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
