upgrade go and fix shared v4

--- a/examples/yaml/Pulumi.yaml
+++ b/examples/yaml/Pulumi.yaml
@@ -211,6 +211,11 @@ resources:
       app: ${app.name}
       addrType: private_v6
       network: pulumi-flyio
+  sharedipv4:
+    type: flyio:IP
+    properties:
+      app: ${app.name}
+      addrType: shared_v4
   certificate:
     type: flyio:Certificate
     properties:
